# glab-cli

./: .codecov.yml  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml
gitlab_cli/: __init__.py  _version.py  cli.py  gitlab_api.py  utils.py
gitlab_cli/issue/: __init__.py  create_issue.py  delete_issue.py  list_issues.py  show_issue.py  update_issue.py
gitlab_cli/issue/issue_links/: __init__.py  create_link.py  delete_link.py  list_links.py
gitlab_cli/repos/: __init__.py  list.py
gitlab_cli/user/: login.py
gitlab_cli/utils/: __init__.py
src/: config.py  gitlab_api.py  main.py  methods.py  utils.py
src/issue/: create_issue.py  delete_issue.py  list_issues.py  show_issue.py  update_issue.py
src/issue/issue_links/: __init__.py  create_link.py  delete_link.py  list_links.py
src/repos/: list.py
src/user/: login.py
src/utils/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_gitlab_api.py  test_logging_config.py  test_utils.py
