[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["gitlab_cli"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.setuptools_scm]
# Configuración de versionado automático basado en tags de git
write_to = "gitlab_cli/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "gitlab_cli"
description = "CLI tool for GitLab API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Miguel Diaz Castillo", email = "miguel.acastillodiaz@gmail.com"}
]
keywords = ["gitlab", "cli", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "click",
    "requests",
    "rich",
    "python-dotenv",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MDCIrony/glab-cli"

[project.scripts]
gitlab-cli = "gitlab_cli.cli:main"

[tool.setuptools.packages.find]
include = ["gitlab_cli*"]

[project.optional-dependencies]
dev = [
    "setuptools>=65.5.1",
    "wheel",
    "pytest>=7.4.3",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
    "setuptools-scm",
]
